kube/sentimail-manual/rabbitmq/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-rabbitmq
  namespace: sentimail-dev

spec:
  rules:
    - host: rabbitmq.sentimail.samoth.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  sentimail-rabbitmq
                port:
                  number: 15672
